# mnemos

./: .baseline-test-count.txt  .gitignore  .v1-pivot-worktree  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ELI5.md  HISTORY.md  LICENSE  README.md  SECURITY.md  STATUS.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
assets/: make_social_preview.py
docs/: ROADMAP.md  v1.0-readme-draft.md
mnemos/: __init__.py  __main__.py  auto_refine.py  auto_refine_background.py  auto_refine_hook.py  catch_up.py  cli.py  config.py  entity_detector.py  errors.py  graph.py  i18n.py  identity.py  install_statusline.py  migrate.py  miner.py  normalizer.py  obsidian.py  onboarding.py  palace.py  palace_indexer.py  pending.py  pilot.py  processing_log.py  prose.py  readiness.py  rebuild.py  recall_briefing.py  refine_lock.py  reindex.py  room_detector.py  search.py  server.py  session_end_hook.py  settings_tui.py  stack.py  watcher.py
scripts/: auto_refine_hook.py  backfill_cwd_frontmatter.py  extract_jsonl_prose.py  hook-template.json  mine_claude_memories.py  rebuild_vault_index.py  statusline_snippet.cmd  statusline_snippet.sh
tests/: conftest.py  test_auto_refine.py  test_auto_refine_hook_script.py  test_backend_errors.py  test_backend_storage_info.py  test_backfill_cwd.py  test_benchmark.py  test_briefing_prompt_v3.py  test_briefing_v2.py  test_catch_up.py  test_chromadb_durability.py  test_cli.py  test_cli_catch_up.py  test_cli_identity.py  test_cli_import_persist.py  test_cli_init.py  test_cli_install_end_hook.py  test_cli_install_recall_hook.py  (+52 more)
(+63 files in other folders)
