[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mnemos"]

[project]
name = "mnemos-dev"
version = "0.1.0"
description = "Obsidian-native AI memory palace with semantic search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Tugra Demirors", email = "tugra@gypenergy.com"},
]
keywords = ["obsidian", "memory", "ai", "mcp", "chromadb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "chromadb>=1.0",
    "mcp>=1.0",
    "watchdog>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
benchmark = ["huggingface_hub>=0.20"]

[project.scripts]
mnemos = "mnemos.cli:main"
